--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-<p>Gabriella Verhaeg</p>
+<!DOCTYPE html>
+<html>
+    <head>
+
+        <title>My Son Asher</title>
+
+    </head>
+    <body>
+        <header>
+
+            <h1>Asher King</h1>
+            <nav>
+                    <ul>
+                        <li><a href="#1">1</a></li>
+                        <li><a href="#2">2</a></li>
+                        <li><a href="#3">3</a></li>
+                        <li><a href="#4">4</a></li>
+                        <li><a href="#5">5</a></li>
+                        <li><a href="#6">6</a></li>
+                    </ul>
+                </nav>
+        </header>
+
+        <main>
+            <article>            
+                <section>
+                    <a name="1"></a>
+                    <h2>-- when i found out i was pregnant and he was a boy --</h2>
+                    <p>write a story about that day and how i felt, clothes i bought, 
+                    telling family, i wanted a boy first my whole life post ultrasound of boy</p>
+                    <figure>
+                        <img src="img url" alt="img discription" />
+                        <figcaption>picture discription</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <a name="2"></a>
+                    <h2>-- when i had him --</h2>
+                    <p>write a story about that day and how i felt about the problems 
+                    and how it hurt and who was there and what hospital weigh height etc</p>
+                    <figure>
+                        <img src="img url" alt="img discription" />
+                        <figcaption>picture discription</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <a name="3"></a>
+                    <h2>-- 6 months --</h2>
+                    <p>write a story about that day and how i felt</p>
+                    <figure>
+                        <img src="img url" alt="img discription" />
+                        <figcaption>picture discription</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <a name="4"></a>
+                    <h2>-- 1 year --</h2>
+                    <p>write a story about that day and how i felt</p>
+                    <figure>
+                        <img src="img url" alt="img discription" />
+                        <figcaption>picture discription</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <a name="5"></a>
+                    <h2>-- now --</h2>
+                    <p>write a story about that day and how i felt</p>
+                    <figure>
+                        <img src="img url" alt="img discription" />
+                        <figcaption>picture discription</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <a name="6"></a>
+                    <h2>-- family and family picture --</h2>
+                    <p>write a story about our whole family, me devin asher and post a picture</p>
+                    <figure>
+                        <img src="img url" alt="img discription" />
+                        <figcaption>picture discription</figcaption>
+                    </figure>
+                </section>
+            </article>
+        </main>
+        
+        <footer>
+                <p>&copy; 2019 Gabriella Verhaeg</p>
+        </footer>
+    </body>
+</html>
