--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
 
-            <h1>Asher King</h1>
+            <h1>Asher Verhaeg King</h1>
             <nav>
                     <ul>
                         <li><a href="#1">1</a></li>
@@ -24,64 +24,83 @@
         <main>
             <article>            
                 <section>
-                    <a name="1"></a>
-                    <h2>-- when i found out i was pregnant and he was a boy --</h2>
-                    <p>write a story about that day and how i felt, clothes i bought, 
-                    telling family, i wanted a boy first my whole life post ultrasound of boy</p>
+                    <h2>It's A Boy!</h2>
+                    <p>I was so happy and excited when I found out my baby was a boy. 
+                        I always wanted a boy first and I knew Devin also wanted a boy.</p>
                     <figure>
-                        <img src="img url" alt="img discription" />
-                        <figcaption>picture discription</figcaption>
+                        <img src="pictures/asherboy.jpg" alt="ultrasound picture" />
+                        <figcaption>This is the ultrasound picture when I found out he was a boy.</figcaption>
                     </figure>
                 </section>
                 <section>
                     <a name="2"></a>
-                    <h2>-- when i had him --</h2>
-                    <p>write a story about that day and how i felt about the problems 
-                    and how it hurt and who was there and what hospital weigh height etc</p>
+                    <h2>He's Here!</h2>
+                    <p>The moment I saw his precious face I was in love. I've never seen anything so small and cute. 
+                        Staying in the hospital for a week after was very hard and I was so ready to get out of there and bring Asher home!</p>
                     <figure>
-                        <img src="img url" alt="img discription" />
-                        <figcaption>picture discription</figcaption>
+                        <img src="pictures/babypic.jpg" alt="Asher's Baby Picture" />
+                        <figcaption>Asher's first photoshoot, he was 3 days old here.</figcaption>
                     </figure>
                 </section>
                 <section>
                     <a name="3"></a>
-                    <h2>-- 6 months --</h2>
-                    <p>write a story about that day and how i felt</p>
+                    <h2>6 Months Old</h2>
+                    <p>When Asher Turned 6 months old he was sitting up, 
+                        eating in his high chair, and was starting to get teeth!</p>
                     <figure>
-                        <img src="img url" alt="img discription" />
-                        <figcaption>picture discription</figcaption>
+                        <img src="pictures/6months.jpg" alt="Asher 6 Months" />
+                        <figcaption>Asher at 6 months.</figcaption>
                     </figure>
                 </section>
                 <section>
                     <a name="4"></a>
-                    <h2>-- 1 year --</h2>
-                    <p>write a story about that day and how i felt</p>
+                    <h2>One Year</h2>
+                    <p>1 Year Old! Time flew by so fast! When Asher turned 1 he was walking with help, 
+                        saying a couple words and had a few teeth.</p>
                     <figure>
-                        <img src="img url" alt="img discription" />
-                        <figcaption>picture discription</figcaption>
+                        <img src="pictures/oneyear.jpg" alt="Asher at 1 year." />
+                        <figcaption>Asher at 1 year old eating his birthday cake.</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <a name="4"></a>
+                    <h2>19 Months</h2>
+                    <p>Asher is now 19 months, walking, talking and getting into everything! Asher loves being outside, he loves being rocked, and he loves peanut butter! 
+                        I am so proud of him every day for how much he's growing and learning and I can't wait to see what happens next! 
+                        I don't know where I would be without him, he has definitely changed my life for better and I couldn't imagine my life without him.</p>
+                    <figure>
+                        <img src="pictures/ashernow.jpg" alt="Asher at the park" />
+                        <figcaption>Asher at the park a last month, 5/16/19.</figcaption>
                     </figure>
                 </section>
                 <section>
                     <a name="5"></a>
-                    <h2>-- now --</h2>
-                    <p>write a story about that day and how i felt</p>
+                    <h2>The Family!</h2>
+                    <p>I love our little family and I cant wait to watch it grow and spend the rest of my life with them! 
+                        I am so blessed to have them in my life.</p>
                     <figure>
-                        <img src="img url" alt="img discription" />
-                        <figcaption>picture discription</figcaption>
+                        <img src="pictures/Family.jpg" alt="Our Family" />
+                        <figcaption>Picture of us at the park.</figcaption>
                     </figure>
                 </section>
-                <section>
-                    <a name="6"></a>
-                    <h2>-- family and family picture --</h2>
-                    <p>write a story about our whole family, me devin asher and post a picture</p>
+                <aside>
+                    <header>Extra Pictures!</header>
                     <figure>
-                        <img src="img url" alt="img discription" />
-                        <figcaption>picture discription</figcaption>
+                            <img src="pictures/FirstCake.jpg" alt="Birthday first cake" />
+                            <figcaption>This is Asher's first birthday cake.</figcaption>
                     </figure>
-                </section>
+                    <figure>
+                            <img src="pictures/SmallCake.jpg" alt="small cake" />
+                            <figcaption>This is Asher's "smash cake" he got to smash and eat for his birthday.</figcaption>
+                    </figure>
+                    <figure>
+                            <img src="pictures/Ashersleepy.jpg" alt="Asher Sleepy" />
+                            <figcaption>Asher after being woke up and still being sleepy, aw.</figcaption>
+                    </figure>
+                </aside>
             </article>
         </main>
-        
+
         <footer>
                 <p>&copy; 2019 Gabriella Verhaeg</p>
         </footer>
