--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
 
         <title>My Son Asher</title>
-
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="styles.css">
+        
     </head>
     <body>
         <header>
