--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
             <h1>Asher Verhaeg King</h1>
             <nav>
                     <ul>
-                        <li><a href="#1">1</a></li>
-                        <li><a href="#2">2</a></li>
-                        <li><a href="#3">3</a></li>
-                        <li><a href="#4">4</a></li>
-                        <li><a href="#5">5</a></li>
-                        <li><a href="#6">6</a></li>
+                        <li><a href="#1">It's A Boy!</a></li>
+                        <li><a href="#2">He's Here!</a></li>
+                        <li><a href="#3">6 Months Old</a></li>
+                        <li><a href="#4">One Year</a></li>
+                        <li><a href="#5">19 Months</a></li>
+                        <li><a href="#6">Family</a></li>
+                        <li><a href="#7">Extra Pictures</a></li>
                     </ul>
                 </nav>
         </header>
@@ -26,6 +27,7 @@
         <main>
             <article>            
                 <section>
+                    <a name="">1</a>
                     <h2>It's A Boy!</h2>
                     <p>I was so happy and excited when I found out my baby was a boy. 
                         I always wanted a boy first and I knew Devin also wanted a boy.</p>
@@ -65,7 +67,7 @@
                     </figure>
                 </section>
                 <section>
-                    <a name="4"></a>
+                    <a name="5"></a>
                     <h2>19 Months</h2>
                     <p>Asher is now 19 months, walking, talking and getting into everything! Asher loves being outside, he loves being rocked, and he loves peanut butter! 
                         I am so proud of him every day for how much he's growing and learning and I can't wait to see what happens next! 
@@ -76,7 +78,7 @@
                     </figure>
                 </section>
                 <section>
-                    <a name="5"></a>
+                    <a name="6"></a>
                     <h2>The Family!</h2>
                     <p>I love our little family and I cant wait to watch it grow and spend the rest of my life with them! 
                         I am so blessed to have them in my life.</p>
@@ -86,6 +88,7 @@
                     </figure>
                 </section>
                 <aside>
+                    <a name="7"></a>
                     <header>Extra Pictures!</header>
                     <figure>
                             <img src="pictures/FirstCake.jpg" alt="Birthday first cake" />
