--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
 
-            <h1>Asher Verhaeg King</h1>
+            <h1 class="name">Asher Verhaeg King</h1>
             <nav>
                     <ul>
                         <li><a href="#1">It's A Boy!</a></li>
@@ -27,7 +27,7 @@
         <main>
             <article>            
                 <section>
-                    <a name="">1</a>
+                    <a name="1"></a>
                     <h2>It's A Boy!</h2>
                     <p>I was so happy and excited when I found out my baby was a boy. 
                         I always wanted a boy first and I knew Devin also wanted a boy.</p>
@@ -89,7 +89,7 @@
                 </section>
                 <aside>
                     <a name="7"></a>
-                    <header>Extra Pictures!</header>
+                    <header id="extra">Extra Pictures!</header>
                     <figure>
                             <img src="pictures/FirstCake.jpg" alt="Birthday first cake" />
                             <figcaption>This is Asher's first birthday cake.</figcaption>
