--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <head>
 
         <title>My Son Asher</title>
@@ -7,21 +8,21 @@
         <link rel="stylesheet" href="styles.css">
         
     </head>
+
     <body>
         <header>
-
-            <h1 class="name">Asher Verhaeg King</h1>
+            <h1 class="name">Asher King Verhaeg</h1>
             <nav>
-                    <ul>
-                        <li><a href="#1">It's A Boy!</a></li>
-                        <li><a href="#2">He's Here!</a></li>
-                        <li><a href="#3">6 Months Old</a></li>
-                        <li><a href="#4">One Year</a></li>
-                        <li><a href="#5">19 Months</a></li>
-                        <li><a href="#6">Family</a></li>
-                        <li><a href="#7">Extra Pictures</a></li>
-                    </ul>
-                </nav>
+                <ul>
+                    <li><a href="#1">It's A Boy!</a></li>
+                    <li><a href="#2">He's Here!</a></li>
+                    <li><a href="#3">6 Months Old</a></li>
+                    <li><a href="#4">One Year</a></li>
+                    <li><a href="#5">19 Months</a></li>
+                    <li><a href="#6">Family</a></li>
+                    <li><a href="#7">Extra Pictures</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main>
@@ -29,7 +30,7 @@
                 <section>
                     <a name="1"></a>
                     <h2>It's A Boy!</h2>
-                    <p>I was so happy and excited when I found out my baby was a boy. 
+                    <p>I was so happy and excited when I found out my baby was a boy. <br>
                         I always wanted a boy first and I knew Devin also wanted a boy.</p>
                     <figure>
                         <img src="pictures/asherboy.jpg" alt="ultrasound picture" />
@@ -59,7 +60,7 @@
                 <section>
                     <a name="4"></a>
                     <h2>One Year</h2>
-                    <p>1 Year Old! Time flew by so fast! When Asher turned 1 he was walking with help, 
+                    <p>1 Year Old! Time flew by so fast! When Asher turned 1 he was walking with help, <br> 
                         saying a couple words and had a few teeth.</p>
                     <figure>
                         <img src="pictures/oneyear.jpg" alt="Asher at 1 year." />
@@ -74,7 +75,7 @@
                         I don't know where I would be without him, he has definitely changed my life for better and I couldn't imagine my life without him.</p>
                     <figure>
                         <img src="pictures/ashernow.jpg" alt="Asher at the park" />
-                        <figcaption>Asher at the park a last month, 5/16/19.</figcaption>
+                        <figcaption>Asher at the park last month, 5/16/19.</figcaption>
                     </figure>
                 </section>
                 <section>
@@ -87,6 +88,7 @@
                         <figcaption>Picture of us at the park.</figcaption>
                     </figure>
                 </section>
+                <br>
                 <aside>
                     <a name="7"></a>
                     <header id="extra">Extra Pictures!</header>
